# walletlib

./: .dockerignore  .gitignore  README.md  app.py  entry_points.ini  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: main.yml
Docker/: Dockerfile
tests/: decrypted
walletlib/: __init__.py  base32.py  bitcoinj_compat.py  bitcoinwallet_pb2.py  coinomi_proto.py  coinomiwallet_pb2.py  crypto.py  exceptions.py  protobufwallet.py  utils.py  wallet_segwit.py  walletdat.py
walletlib/scripts/: dumpwallet.py
