[tool.poetry]
name = "walletlib"
version = "0.2.5"
description = "Library for accessing cryptocurrency wallet files"
authors = ["jim zhou <43537315+jimtje@users.noreply.github.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = ">= 3.7"
pycryptodome = "^3.9.9"
click = "^7.1.2"
coincurve = "^13.0.0"
bsddb3 = "^6.2.9"
base58 = "^2.1.0"
arrow = "^0.17.0"
betterproto = "^1.2.5"

[tool.poetry.dev-dependencies]
twine = "^3.4.1"

[tool.poetry.scripts]
dumpwallet = "walletlib.scripts.dumpwallet:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
